--- a/tasks/unit_started.yml
+++ b/tasks/unit_started.yml
@@ -15,23 +15,53 @@
       ansible.builtin.service_facts:
       register: systemd_service_facts
 
-    - name: "Systemd unit started when not running or not active for {{ systemd_unit.name }}"
-      ansible.builtin.systemd_service:
-        name: "{{ systemd_unit.name }}"
-        state: started
-      vars:
-        systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
-      register: systemd_service_started
-      until:
-        - systemd_service_started.status.SubState is defined
-        - (systemd_service_started.status.SubState == "running") or (systemd_service_started.status.SubState == "exited")
-        - systemd_service_started.status.Result is defined
-        - systemd_service_started.status.Result == "success"
-      retries: 5
-      delay: 2
-      when: >-
-        ((systemd_service_facts | community.general.json_query(systemd_service_jpq)).state != "running") or
-        ((systemd_service_facts | community.general.json_query(systemd_service_jpq)).status.ActiveState != "active")
+    - name: Start systemd service unit in a block to catch failures for debugging
+      block:
+
+        - name: "Systemd unit started when not running or not active for {{ systemd_unit.name }}"
+          ansible.builtin.systemd_service:
+            name: "{{ systemd_unit.name }}"
+            state: started
+          vars:
+            systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
+          register: systemd_service_started
+          until:
+            - systemd_service_started.status.SubState is defined
+            - (systemd_service_started.status.SubState == "running") or (systemd_service_started.status.SubState == "exited")
+            - systemd_service_started.status.Result is defined
+            - systemd_service_started.status.Result == "success"
+          retries: 5
+          delay: 2
+          when: >-
+            (((systemd_service_facts | community.general.json_query(systemd_service_jpq)).state is defined) and
+            ((systemd_service_facts | community.general.json_query(systemd_service_jpq)).state != "running")) or
+            (((systemd_service_facts | community.general.json_query(systemd_service_jpq)).status.ActiveState is defined) and
+            ((systemd_service_facts | community.general.json_query(systemd_service_jpq)).status.ActiveState != "active"))
+
+      rescue:
+
+        - name: Debug systemd_service_facts
+          ansible.builtin.debug:
+            var: systemd_service_facts
+
+        - name: "Debug (systemd_service_facts | community.general.json_query({{ systemd_service_jpq }})).state"
+          ansible.builtin.debug:
+            msg: "{{ (systemd_service_facts | community.general.json_query(systemd_service_jpq)).state }}"
+          vars:
+            systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
+
+        - name: "Debug (systemd_service_facts | community.general.json_query({{ systemd_service_jpq}} )).status.ActiveState }}"
+          ansible.builtin.debug:
+            msg: "{{ (systemd_service_facts | community.general.json_query({{ systemd_service_jpq}} )).status.ActiveState }}"
+          vars:
+            systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
+
+        - name: Debug systemd_service_started
+          ansible.builtin.debug:
+            var: systemd_service_started
+
+        - name: "Fail as starting {{ systemd_unit.name }} failed."
+          ansible.builtin.fail:
 
     - name: Restart the service when the unit file has changed
       block:
