--- a/tasks/unit_started.yml
+++ b/tasks/unit_started.yml
@@ -83,6 +83,7 @@
           vars:
             systemd_service_jpq: 'ansible_facts.services.["{{ systemd_unit.name }}.service"]|[0]'
           register: systemd_service_restarted
+          # TODO Work out why this doesn't work...
           # until:
           #   - systemd_service_restarted.status is defined
           #   - systemd_service_restarted.status.SubState is defined
